# parsing-with-derivatives-haskell

./: .gitignore  Base.hs  Makefile  README  Test.hs  Tests.hs  der-parser.cabal  ghci
ghci-load/: GHCILoad.hs  ghci-load.cabal
samples/: deep04.txt  deep05.txt  deep06.txt  deep07.txt  deep08.txt  deep09.txt  deep10.txt  rep05.txt  rep06.txt  rep07.txt  rep08.txt  rep09.txt  rep10.txt
src/: DerParser.hs  Test.hs
src/DerParser/: Test.hs  Tests.hs
src/Test/: SimpleTesting.hs
src/Text/: DerParser.hs
src/Text/DerParser/: Tests.hs
src2/DerParser/: Test.hs
