Name: der-parser
Version: 0.0.0.1
Cabal-Version: >= 1.6
Build-Type: Simple
Author: David Darais
Category: Parser
Synopsis: A derivatives based parsing framework

Library
  Build-Depends: 
      base == 4.1.0.0
    , mtl == 1.1.0.2
    , containers == 0.2.0.1
    , template-haskell == 2.3.0.1
    , simple-testing
  Exposed-Modules: DerParser
  HS-Source-Dirs: src
  GHC-Options: -Wall

Executable der-parser-test
  Main-Is: DerParser/Test.hs
  HS-Source-Dirs: src
  GHC-Options: -Wall -main-is DerParser.Test.main

