Name: der-parser
Version: 0.0.0.1
Cabal-Version: >= 1.6
Build-Type: Simple
Author: David Darais
Category: Parser
Synopsis: A derivatives based parsing framework

Library
  Build-Depends: 
      base
    , mtl
    , containers
    , template-haskell
  Exposed-Modules: DerParser
  HS-Source-Dirs: src
  GHC-Options: -Wall -isrc

Executable der-parser-test
  Main-Is: DerParser/Test.hs
  HS-Source-Dirs: src
  GHC-Options: -Wall -isrc -main-is DerParser.Test.main

